fabrique-derive/tests/ui/invalid_relation_type.stderr
error: Unknown value: `Not A Valid Type` at relation
 --> tests/ui/invalid_relation_type.rs:4:1
  |
4 | struct Anvil {
  | ^^^^^^
